increment: Create list page
- Create button to add new element.
- Create card to show employee data.

--- a/src/app/templates/dashboard/dashboard.component.html
+++ b/src/app/templates/dashboard/dashboard.component.html
@@ -22,7 +22,7 @@
     </div>
   </mat-toolbar>
 
-  <section class="t-dashboard__section">
+  <div class="t-dashboard__main">
     <router-outlet></router-outlet>
-  </section>
+  </div>
 </main>
