increment: Create employee card atom and employee model
- Install moment library

--- a/src/app/pages/list/list.component.html
+++ b/src/app/pages/list/list.component.html
@@ -6,33 +6,7 @@
   </div>
 
   <div class="p-list__elements">
-    <mat-card class="elements__card card">
-      <mat-card-header>
-        <mat-card-title>#1</mat-card-title>
-      </mat-card-header>
-      <mat-card-content class="card__content">
-        <div>
-          <span class="card__content-value">{{ 'value' | uppercase }}</span><br>
-          <span class="card__content-key">{{ 'key' | uppercase }}</span>
-        </div>
-        <div>
-          <span class="card__content-value">{{ 'value' | uppercase }}</span><br>
-          <span class="card__content-key">{{ 'key' | uppercase }}</span>
-        </div>
-        <div>
-          <span class="card__content-value">{{ 'value' | uppercase }}</span><br>
-          <span class="card__content-key">{{ 'key' | uppercase }}</span>
-        </div>
-        <div>
-          <span class="card__content-value">{{ 'value' | uppercase }}</span><br>
-          <span class="card__content-key">{{ 'key' | uppercase }}</span>
-        </div>
-      </mat-card-content>
-      <mat-card-actions class="card__actions">
-        <button mat-flat-button color="accent">Editar</button>
-        <button mat-flat-button color="warn">Eliminar</button>
-      </mat-card-actions>
-    </mat-card>
+    <app-employee-card></app-employee-card>
   </div>
 
 </section>
