--- a/src/app/pages/list/list.component.html
+++ b/src/app/pages/list/list.component.html
@@ -6,7 +6,10 @@
   </div>
 
   <div class="p-list__elements">
-    <app-employee-card></app-employee-card>
+    <app-employee-card 
+      *ngFor="let employee of employeesList"
+      [employee]="employee"
+      (buttonClicked)="onButtonClicked($event, employee)"></app-employee-card>
   </div>
 
 </section>
