--- a/src/app/templates/dashboard/dashboard.component.scss
+++ b/src/app/templates/dashboard/dashboard.component.scss
@@ -2,7 +2,7 @@
 @import 'tools/tools.scss';
 
 .t-dashboard {
-  height: 100%;
+  min-height: 100%;
 
   .toolbar {
     display: flex;
@@ -26,11 +26,10 @@
   }
 
   &__main {
-    margin: 0 auto;
-    margin-top: calculate-size(50);
+    margin: calculate-size(50) auto;
     width: 60%;
     max-width: 1000px;
-    height: 80%;
+    min-height: 80%;
 
     @include use-breakpoint('x-grande') {
       width: 80%;
