--- a/src/app/pages/list/list.component.html
+++ b/src/app/pages/list/list.component.html
@@ -2,7 +2,10 @@
 
   <div class="p-list__header header">
     <h1>Lista de empleados (10)</h1>
-    <button mat-raised-button color="primary">Crear empleado</button>
+    <button 
+      mat-raised-button 
+      color="primary"
+      (click)="onButtonClicked('create', null)">Crear empleado</button>
   </div>
 
   <div class="p-list__elements">
