--- a/src/app/pages/manage/manage.component.html
+++ b/src/app/pages/manage/manage.component.html
@@ -10,16 +10,20 @@
 
     <mat-form-field class="form__field" appearance="outline" *ngIf="!!actualEmployee && actualEmployee.id">
       <mat-label>Id</mat-label>
-      <input matInput type="text" formControlName="id" [disabled]>
-      <button mat-button *ngIf="form.get('id').value" matSuffix mat-icon-button aria-label="Clear" (click)="value=''">
-        <mat-icon>close</mat-icon>
-      </button>
+      <input matInput type="text" formControlName="id">
     </mat-form-field>
     
     <mat-form-field class="form__field" appearance="outline">
       <mat-label>Nombre</mat-label>
       <input matInput type="text" formControlName="name">
-      <button mat-button *ngIf="form.get('name').value" matSuffix mat-icon-button aria-label="Clear" (click)="value=''">
+      <button 
+        mat-button 
+        *ngIf="form.get('name').value" 
+        matSuffix 
+        mat-icon-button 
+        aria-label="Clear" 
+        (click)="form.get('name').setValue('')"
+        type="button">
         <mat-icon>close</mat-icon>
       </button>
       <mat-error *ngIf="form.get('name').invalid">{{
@@ -30,7 +34,14 @@
     <mat-form-field class="form__field" appearance="outline">
       <mat-label>Apellidos</mat-label>
       <input matInput type="text" formControlName="lastName">
-      <button mat-button *ngIf="form.get('lastName').value" matSuffix mat-icon-button aria-label="Clear" (click)="value=''">
+      <button 
+        mat-button 
+        *ngIf="form.get('lastName').value" 
+        matSuffix 
+        mat-icon-button 
+        aria-label="Clear" 
+        (click)="form.get('lastName').setValue('')"
+        type="button">
         <mat-icon>close</mat-icon>
       </button>
       <mat-error *ngIf="form.get('lastName').invalid">{{
@@ -51,7 +62,14 @@
     <mat-form-field class="form__field" appearance="outline">
       <mat-label>Pago</mat-label>
       <input matInput type="number" formControlName="pay">
-      <button mat-button *ngIf="form.get('pay').value" matSuffix mat-icon-button aria-label="Clear" (click)="value=''">
+      <button 
+        mat-button 
+        *ngIf="form.get('pay').value" 
+        matSuffix 
+        mat-icon-button 
+        aria-label="Clear" 
+        (click)="form.get('pay').setValue('')"
+        type="button">
         <mat-icon>close</mat-icon>
       </button>
       <mat-error *ngIf="form.get('pay').invalid">{{
@@ -63,12 +81,13 @@
       <button 
         mat-flat-button 
         color="accent"
-        type="submit">{{ title }}</button>
+        type="submit"
+        [disabled]="this.form.invalid">{{ title }}</button>
       <button 
         mat-flat-button 
         color="warn"
         type="button"
-        (click)="onCancel()">Cancelar</button>
+        (click)="returnToListPage()">Cancelar</button>
     </div>
   </form>
 </section>
